syntax = "proto3";

package notification_center;

import "common.proto";
import "notification_center/apns.proto";
import "notification_center/event.proto";
import "notification_center/wechat.proto";

service Apns {
    rpc SetUserApns(SetUserApnsRequest) returns (common.DefaultResponse);
    rpc SendNotificationToUser(SendApnsNotificationRequest) returns (common.DefaultResponse);
}

service Wechat {
    rpc SetUserOpenId(SetUserOpenIdRequest) returns (common.DefaultResponse);
    rpc HandleWechatServerEvent(HandleWechatServerEventRequest) returns (common.DefaultResponse);
}

service Notification {
    rpc UpdateEventSubscribe(UpdateEventSubscribeRequest) returns (common.DefaultResponse);
    rpc FetchSubscribeInfo(common.UserId) returns (FetchSubscribeInfoResponse);
}
